--- a/index.html
+++ b/index.html
@@ -910,8 +910,8 @@
                     <i class="fa fa-map-marker"></i>
                     <address>
                         <strong>Address/Street</strong>
-                        1983 Dandenong Rd
-                        <br>Clayton, Melbourne, VIC
+                        3/11 tennyson st.
+                        <br>Malvern East, Melbourne, VIC
                     </address>
                 </div>
 
@@ -919,7 +919,7 @@
                     <i class="fa fa-mobile"></i>
                     <div class="contact-number">
                         <strong>Phone Number</strong>
-                        (+61) 435 507 775
+                        (+61) 410677832
                     </div>
                 </div>
 
@@ -927,7 +927,7 @@
                     <i class="fa fa-envelope"></i>
                     <div class="contact-number">
                         <strong>E-mail</strong>
-                        anirbanroychowdhury256@gmail.com
+                        aniketagrawal.s@gmail.com
                     </div>
                 </div>
             </div>
@@ -945,7 +945,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="copyright text-center">
-                    <p>&copy; Anirban Roy Chowdhury<br>All information provided is factual.</p>
+                    <p>&copy; Aniket Agrawal<br>All information provided is factual.</p>
                 </div>
             </div>
         </div>
