--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <meta name="author" content="">
 
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Anirban Roy Chowdhury" />
+        <meta property="og:title" content="Aniket Agrawal" />
         <!--<meta property="og:description"        content="I am a fully professional freelance creative User Interface Designer & Developer. Feel free to contact." />-->
 
 
-        <title>Anirban Roy Chowdhury</title>
+        <title>Aniket Agrawal</title>
 
         <!-- Bootstrap core CSS -->
         <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
