--- a/index.html
+++ b/index.html
@@ -49,23 +49,25 @@
 
                 <h1 class="tt-headline letters type">
                     <!-- you can use "rotate-1", "letters type", "letters rotate-2", "letters rotate-3", "letters scale", "loading-bar", "slide", "clip is-full-width", "push" -->
-                    <div class="intro-sub">Anirban Roy Chowdhury</div>
+                    <div class="intro-sub">Aniket Agrawal</div>
                     <span class="tt-words-wrapper">
                         <b class="is-visible">Data Scientist</b>
+                        <b>Business Analyst</b>
                         <b>Web Developer</b>
+                        
                     </span>
                 </h1>
                 <br><br>
                 <div>
-                    <p>Master's of Data Science student at Monash University.<br>B.Tech Computer Science and communication Graduate.
+                    <p>Master's of Data Science - Monash University.<br>B.Tech Electonics and communication Graduate.
                     </p>
                 </div><br>
 
                 <div class="social-icons">
                     <ul class="list-inline">
-                        <li><a target="_blank" href="https://www.linkedin.com/in/anirbanroychowdhury10/"><i
+                        <li><a target="_blank" href="https://www.linkedin.com/in/aniketagrawal29/"><i
                                                                                                             class="fa fa-linkedin"></i></a></li>
-                        <li><a target="_blank" href="https://github.com/anirbanroychowdhury"><i
+                        <li><a target="_blank" href="https://github.com/aagr29"><i
                                                                                                             class="fa fa-github"></i></a></li>
                     </ul>
                 </div> <!-- /.social-icons -->
@@ -122,11 +124,11 @@
                                 <img src="assets/images/myphoto.jpg" alt="">
                             </div>
                             <ul>
-                                <li><strong>Name:</strong> Anirban Roy Chowdhury</li>
-                                <li><strong>Date of birth:</strong> 7 Oct 1995</li>
+                                <li><strong>Name:</strong> Aniket Agrawal</li>
+                                <li><strong>Date of birth:</strong> 29 Aug 1994</li>
                                 <li><strong>Nationality:</strong> Indian</li>
-                                <li><strong>Phone:</strong> 043 550 7775</li>
-                                <li><strong>Email:</strong> anirbanroychowdhury256@gmail.com</li>
+                                <li><strong>Phone:</strong> 041 067 7832</li>
+                                <li><strong>Email:</strong> aniketagrawal.s@gmail.com</li>
                             </ul>
                         </div>
                     </div> <!-- col-md-4 -->
