--- a/index.html
+++ b/index.html
@@ -136,13 +136,16 @@
                     <div class="col-md-8 col-md-pull-4">
                         <div class="short-info wow fadeInUp">
                             <!-- <h3>Objective</h3> -->
-                            <p>I am a B. Tech Computer and Communication science graduate from Manipal Institute of Technology, Karnataka. Currently pursuing my Master of Data Science from Monash University to build upon my existing skill set.
+                            <p>I am a business analyst by profession, with a master’s degree in data science from Monash University. 
                                 <br><br>
-                                With professional experience in automation testing, web, and software development. I am proficient in python, java, web technologies (HTML, CSS, JS, d3.js) and framework (React) and their automation technologies (selenium).
+                                My expertise includes working with large data set to come up with analysis that are in line with company’s goals. In my previous roles I have been responsible for creating visualization to communicate key business insights to shareholders from multiple different teams. 
+                                I excel at coming up with technological solutions to help solve real-world business issues, while effectively communicating these analysis / ideas with me team and various shareholders, to quickly come up with prototypes so that we can get a clear measure of growth.
                                 <br><br>
-                                I excel at coming up with technological solutions to help solve real-world business problems, while effectively communicating these ideas with my team to quickly come up with prototypes so that we can have a clear measure of progress.
+                                Garnering work experience from the corporate firms of all sizes, I’m a critical thinker driven by the fascination of technology with an urge to create positive impact on businesses. With professional experience in Data visualization, Customer behavior analysis and web development.
+                                I am proficient in related technologies such as PowerBI, Tableau and web development technologies including HTML5, CSS3, JS, d3.js and related frameworks (React & Angular5).
                                 <br><br>
-                                In my free times, I like to run and explore my neighborhood. I also like to trek and camp.
+                                I am also deeply curious about the financial world, and actively invest in the growing Indian market, to further improve my skills in this domain I have already cleared CFA level 1, with plans to complete the Chartered program up till level 3 in the near future.
+                                
                             </p>
                         </div>
 
@@ -152,7 +155,9 @@
 
                             <ul class="list-check">
                                 <li>Data Science</li>
+                                <li>Business Analyst</li>
                                 <li>Web Development</li>
+                             
                             </ul>
                         </div>
 
@@ -177,22 +182,19 @@
                                     <div class="timeline-panel wow fadeInUp">
                                         <div class="timeline-content">
                                             <div class="timeline-heading">
-                                                <h3>Analyst</h3>
-                                                <span>BlackRock Services, Gurgaon</span>
+                                                <h3>Business Analyst </h3>
+                                                <span>E-CentricInnovations, Melbourne</span>
                                             </div><!-- /timeline-heading -->
 
                                             <div class="timeline-body">
                                                 <p>
                                                 <ul type="square">
-                                                    <li>Worked with Angular, Java and Node to create the product website for Blackrock. This
-                                                        website was created
-                                                        using modular angular components, while keeping scalability in mind. Worked with multiple
-                                                        stake holders from
-                                                        cross domain teams to deliver on the final product. Our team worked in an agile/scrum
-                                                        methodology. My role
-                                                        gave me a unique perspective in finance domain brought about by interacting and
-                                                        collaborating with different
-                                                        contributors from varying domain and expertise</li>
+                                                    <li>•	Working with shareholders from different teams to gather key requirements for the project.
+                                                        •	Went through the entire SDLC lifecycle while working in an agile environment.
+                                                        •	The product helped 70% of interns get work in less than 2 weeks.
+                                                        •	Created dashboard to monitor KPI’s for the organization.
+                                                        •	Did daily Scrum management for the team (JIRA & Confluence)
+                                                        </li>
                                                 </ul>
                                                 </p>
                                         </div><!-- /timeline-body -->
