--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
                                 <li>
                                     <div class="posted-date">
-                                        <span class="month" style="background-color: #FAFAFA;">Jan'18-Jun'19</span>
+                                        <span class="month" style="background-color: #FAFAFA;">Sep’20 – Feb’21</span>
                                     </div><!-- /posted-date -->
 
                                     <div class="timeline-panel wow fadeInUp">
@@ -189,11 +189,13 @@
                                             <div class="timeline-body">
                                                 <p>
                                                 <ul type="square">
-                                                    <li>•	Working with shareholders from different teams to gather key requirements for the project.
-                                                        •	Went through the entire SDLC lifecycle while working in an agile environment.
-                                                        •	The product helped 70% of interns get work in less than 2 weeks.
-                                                        •	Created dashboard to monitor KPI’s for the organization.
-                                                        •	Did daily Scrum management for the team (JIRA & Confluence)
+                                                    <li>
+                                                      
+                                                     <li>   Working with shareholders from different teams to gather key requirements for the project.</li>
+                                                     <li>    Went through the entire SDLC lifecycle while working in an agile environment.</li>
+                                                     <li>   The product helped 70% of interns get work in less than 2 weeks.</li>
+                                                     <li>   Created dashboard to monitor KPI’s for the organization.</li> 
+                                                     <li>    Did daily Scrum management for the team (JIRA & Confluence)</li>
                                                         </li>
                                                 </ul>
                                                 </p>
