--- a/index.html
+++ b/index.html
@@ -191,12 +191,12 @@
                                                 <ul type="square">
                                                     <li>
                                                       
-                                                     <li>   Working with shareholders from different teams to gather key requirements for the project.</li>
-                                                     <li>    Went through the entire SDLC lifecycle while working in an agile environment.</li>
-                                                     <li>   The product helped 70% of interns get work in less than 2 weeks.</li>
-                                                     <li>   Created dashboard to monitor KPI’s for the organization.</li> 
-                                                     <li>    Did daily Scrum management for the team (JIRA & Confluence)</li>
-                                                        </li>
+                                                        Working with shareholders from different teams to gather key requirements for the project.
+                                                        Went through the entire SDLC lifecycle while working in an agile environment.
+                                                        The product helped 70% of interns get work in less than 2 weeks.
+                                                        Created dashboard to monitor KPI’s for the organization.
+                                                        Did daily Scrum management for the team (JIRA & Confluence)
+                                                    </li>
                                                 </ul>
                                                 </p>
                                         </div><!-- /timeline-body -->
