--- a/index.html
+++ b/index.html
@@ -206,21 +206,24 @@
 
                         <li class="timeline-inverted">
                             <div class="posted-date">
-                                <span class="month" style="background-color: #FAFAFA;">Aug'17-Jan'18</span>
+                                <span class="month" style="background-color: #FAFAFA;">Aug’19- Feb’20</span>
                             </div><!-- /posted-date -->
 
                             <div class="timeline-panel wow fadeInUp">
                                 <div class="timeline-content">
                                     <div class="timeline-heading">
-                                        <h3>Java Developer</h3>
-                                        <span>Genpact, Gurgaon</span>
+                                        <h3>Full Stack Developer</h3>
+                                        <span>Dental ED Global, Melbourne</span>
                                     </div><!-- /timeline-heading -->
 
                                     <div class="timeline-body">
                                         <p>
                                         <ul type="circle">
-                                            <li>Worked as a sole developer on a legacy call pass through system developed using java
-                                                on both front end and backend.</li>
+                                            <li>Worked on Dental ED's CRM system - LeadCron using Django.
+                                                Implemented new analytics into the dental practice's data and visualized it on MiPractice - an analytics web tool.
+                                                Developed and deployed the MiPractice iOS application (web view) on both iOS and Android Play Store.
+                                                Worked on implementing the caching layer for the MiPractice website. The project was able to cut the computation speed of the analytical functions to 20% of the time they initially took.
+                                                </li>
                                         </ul>
                                         </p>
                                 </div><!-- /timeline-body -->
@@ -231,35 +234,62 @@
 
                 <li>
                     <div class="posted-date">
-                        <span class="month" style="background-color: #FAFAFA;">Jan'17-May'17</span>
+                        <span class="month" style="background-color: #FAFAFA;">Feb’20 – May’20</span>
                     </div><!-- /posted-date -->
 
                     <div class="timeline-panel wow fadeInUp">
                         <div class="timeline-content">
                             <div class="timeline-heading">
-                                <h3>Intern</h3>
-                                <span>Publicis Sapient, Gurgaon</span>
+                                <h3>Developer/Data Analyst</h3>
+                                <span>Monash University – Industrial Experience,Melbourne</span>
                             </div><!-- /timeline-heading -->
 
                             <div class="timeline-body">
                                 <p>
                                 <ul type="square">
-                                    <li>As a part of my final year internship I had worked as a software engineer trainee. In this
-                                        internship period I learnt various Microsoft technologies (ASP.Net, C#, etc). At the end of
-                                        the internship, our team of 4 had build a dummy stock exchange market, where several traders
-                                        could simultaneously trade with each other.
-                                        This was a client server application, with multiple clients accessing a centralized server where
-                                        all the
-                                        computation regarding the stock trade was done. The client was a simple GUI desktop
-                                        application where the
-                                        trader was able to input all the necessary details required for the trade execution to
-                                        trigger</li>
+                                    <li>Worked in a team of 4 to gather requirements and set KPI’s for the project.
+                                        Managed shareholder expectation and set realistic deadlines using agile methodology.
+                                        Scrapped & Gathered datasets to generate analysis to base our product on.
+                                        Prototyped different responsive UI/UX experiences and A/B tested the designs on a set of users.  
+                                        Created an efficient Database design, created using PostgreSQL.
+                                        Wrote RESTful API’s which were used to generate graphs for the user’s metrics.
+                                        Created data visualization using HighCharts.js for user’s day to day metrics.
+                                        </li>
                                 </ul>
                                 </p>
                         </div><!-- /timeline-body -->
                     </div> <!-- /timeline-content -->
             </div><!-- /timeline-panel -->
             </li>
+            <li class="timeline-inverted">
+                <div class="posted-date">
+                    <span class="month" style="background-color: #FAFAFA;">Aug’17 - June’18</span>
+                </div><!-- /posted-date -->
+
+                <div class="timeline-panel wow fadeInUp">
+                    <div class="timeline-content">
+                        <div class="timeline-heading">
+                            <h3>Junior Analyst </h3>
+                            <span>Bombardier Transportation India, Vadodara</span>
+                        </div><!-- /timeline-heading -->
+
+                        <div class="timeline-body">
+                            <p>
+                            <ul type="circle">
+                                <li>Build the Product Pages RESTful API’s using Flask which returned product data to front end. 
+                                    Created and automated daily metric reports using R.
+                                    Helped in developing critical warning systems for different multi-mode transportation carriers.
+                                	Developed and maintained automation scripts which tested over 3000+ components over 150 product
+                                    sites using Java and selenium framework.
+                                    
+                                    </li>
+                            </ul>
+                            </p>
+                    </div><!-- /timeline-body -->
+                </div> <!-- /timeline-content -->
+        </div> <!-- /timeline-panel -->
+        </li>
+
 
 
         </ul>
