--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                                                                                                              class="fa fa-search-plus"></i></a>
                                         </div>
                                         <img src="assets/images/premier-league.jpg" alt="image">
-                                        <a style="display: block;" href = "https://github.com/anirbanroychowdhury/Apache-Spark-Demo---Multiple-Streams">    
+                                        <a style="display: block;" href = "https://github.com/aagr29/-Apache-Spark-Demo---Multiple-Streams">    
                                             <div class="portfolio-info" >  
                                                 <h3>Apache PySpark - Multiple Stream</h3>
                                             </div>
@@ -341,7 +341,7 @@
 
                                         </div>
                                         <img src="assets/images/restaurant-management.jpg" alt="image">
-                                        <a style="display: block;" href = "https://github.com/anirbanroychowdhury/Apache-Spark-Modeling-demo">
+                                        <a style="display: block;" href = "https://github.com/aagr29/Apache-Spark-Demo">
                                             <div class="portfolio-info">
                                                 <h3>Apache PySpark - Modelling</h3>
                                             </div>
@@ -358,7 +358,7 @@
                                                                                                             class="fa fa-search-plus"></i></a>
                                         </div>
                                         <img src="assets/images/tap-to-listen.jpg" alt="image">
-                                        <a style="display: block;" href = "https://github.com/anirbanroychowdhury/Data-Integration">
+                                        <a style="display: block;" href = "https://github.com/aagr29/Data-Integration-">
                                             <div class="portfolio-info">
                                                 <h3>Data Integration - PDF,HTML,etc</h3>
                                             </div>
@@ -374,7 +374,7 @@
                                             <a class="image-link" href="assets/images/tesk.jpg"><i class="fa fa-search-plus"></i></a>
                                         </div>
                                         <img src="assets/images/tesk.jpg" alt="image">
-                                        <a style="display: block;" href = "https://github.com/anirbanroychowdhury/Data-Wrangling---Outlier-detection-Missing-Data-Imputation">
+                                        <a style="display: block;" href = "https://github.com/aagr29/Data-Wrangling---Outlier-detection">
                                             <div class="portfolio-info">
                                                 <h3>Outlier Detection & Missing info Imputation</h3>
                                             </div>
@@ -390,7 +390,7 @@
                                             <a class="image-link" href="assets/images/tesk.jpg"><i class="fa fa-search-plus"></i></a>
                                         </div>
                                         <img src="assets/images/bigdata.jpg" alt="image">
-                                        <a style="display: block;" href = "https://github.com/anirbanroychowdhury/Apache-Spark-Demo---Data-Cleaning-Predictions">
+                                        <a style="display: block;" href = "https://github.com/aagr29/Apache-Spark-Demo---Data-Cleaning-Predictions">
                                             <div class="portfolio-info">
                                                 <h3>Apache PySpark - Data Cleaning</h3>
                                             </div>
@@ -407,7 +407,7 @@
                                                                                                            class="fa fa-search-plus"></i></a>
                                         </div>
                                         <img src="assets/images/data-privacy.jpg" alt="image">
-                                        <a style="display: block;" href = "https://github.com/anirbanroychowdhury/Data-Wranlging-Language-Analysis">
+                                        <a style="display: block;" href = "https://github.com/aagr29/Language-Analysis-NLP">
                                             <div class="portfolio-info">
                                                 <h3>Language Analysis</h3>
                                             </div>
@@ -424,7 +424,7 @@
                                                                                                                 class="fa fa-search-plus"></i></a>
                                         </div>
                                         <img src="assets/images/dead-code-removal.jpg" alt="image">
-                                        <a style="display: block;" href = "https://github.com/anirbanroychowdhury/AirbnbDataVisualization">
+                                        <a style="display: block;" href = "https://github.com/aagr29/AirbnbVisualization---D3">
                                             <div class="portfolio-info">
                                                 <h3>Airbnb Visualization</h3>
                                             </div>
@@ -440,7 +440,7 @@
                                             <a class="image-link" href="assets/images/mood-lamp.jpg"><i class="fa fa-search-plus"></i></a>
                                         </div>
                                         <img src="assets/images/mood-lamp.jpg" alt="image">
-                                        <a style="display: block;" href = "https://github.com/anirbanroychowdhury/BasicNetworkGraph-D3">
+                                        <a style="display: block;" href = "https://github.com/aagr29/D3-Demo">
                                             <div class="portfolio-info">
                                                 <h3>D3 Demo - Network Vis</h3>
                                             </div>
@@ -473,7 +473,7 @@
                                                                                                                class="fa fa-search-plus"></i></a>
                                         </div>
                                         <img src="assets/images/event-management.jpg" alt="image">
-                                        <a style="display: block;" href = "https://github.com/anirbanroychowdhury/AI_Path_Finder">
+                                        <a style="display: block;" href = "https://github.com/aagr29/A-Path-Finder">
                                             <div class="portfolio-info">
                                                 <h3>AI Path Finder</h3>
                                             </div>    
@@ -532,7 +532,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="posted-date">
-                                <span class="month" style="background-color: #FAFAFA;">2019-2021</span>
+                                <span class="month" style="background-color: #FAFAFA;">2018-2020</span>
                             </div><!-- /posted-date -->
 
                             <div class="timeline-panel wow fadeInUp">
@@ -561,7 +561,7 @@
                                     </div><!-- /timeline-heading -->
 
                                     <div class="timeline-body">
-                                        <p>Computer Science and Communication Engineering</p>
+                                        <p>Electronics and Communication Engineering</p>
                                     </div><!-- /timeline-body -->
                                 </div> <!-- /timeline-content -->
                             </div><!-- /timeline-panel -->
