--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                                                         Went through the entire SDLC lifecycle while working in an agile environment.
                                                         The product helped 70% of interns get work in less than 2 weeks.
                                                         Created dashboard to monitor KPI’s for the organization.
-                                                        Did daily Scrum management for the team (JIRA & Confluence)
+                                                        Did daily Scrum management for the team (JIRA & Confluence).
                                                     </li>
                                                 </ul>
                                                 </p>
