--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                                     <div class="timeline-panel wow fadeInUp">
                                         <div class="timeline-content">
                                             <div class="timeline-heading">
-                                                <h3>Business Analyst </h3>
+                                                <h3>Programmer Analyst </h3>
                                                 <span>E-CentricInnovations, Melbourne</span>
                                             </div><!-- /timeline-heading -->
 
