--- a/index.html
+++ b/index.html
@@ -946,8 +946,8 @@
                     <i class="fa fa-map-marker"></i>
                     <address>
                         <strong>Address/Street</strong>
-                        3/11 tennyson st.
-                        <br>Malvern East, Melbourne, VIC
+                        5/28 Union Street
+                        <br>Adelaide , South Australia - 5000
                     </address>
                 </div>
 
